# LMT-dim-reduction-analysis

./: .gitignore  LICENSE  SETUP_GUIDE.md  analyze_db_mismatch.py  check_behaviors.py  forkosh approach.txt  forkosh statistics.txt  pyproject.toml  pytest.ini  roadmap  roadmap.txt  setup.py
data/: EID_matrix.npy  identity_domains_behaviors.txt
data/behavior_stats_intervals_analyzed/: merged_analysis_behavior_stats_to_analyze_identity_space_visualization_20250130_014542.html
docs/: LICENSE  README.html  readme.md  requirements.txt
src/: __init__.py  test_ratios.py
src/analysis/: LDA_F.py  README.md  __init__.py  analysis_demo.py  analysis_pipeline.py  lda_fo3mini.py  ldarunner.py  parallel_lda.py  parallel_pca.py  preprocessing.py  reporting.py  run_analysis.py  sequential_analysis.py  statistics.py  test_lda.py
src/behavior/: behavior_processor.py  behavior_processor_hourly.py  behavior_processor_interval.py
src/database/: lda_database_creator.py
src/preprocessing/: __init__.py  event_filtered.py
src/utils/: __init__.py  database_utils.py  db_selector.py
src/visualization/: __init__.py  identity_space_plotter.py
tests/: __init__.py  test_imports.py  test_initialization.py
